k8s/prod-deployment.yaml
# --- PROD PING SERVICE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-prod
  namespace: production
  labels:
    app: ping
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
      env: prod
  template:
    metadata:
      labels:
        app: ping
        env: prod
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: env
                    operator: In
                    values:
                      - prod
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: ping
          image: eyupcanbay/ping-service:38b636b10edf7ed11d1d0059a9abfb39cb1b405a
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: ping-prod
  namespace: production
  labels:
    app: ping
spec:
  selector:
    app: ping
    env: prod
  type: NodePort
  ports:
    - name: http-port
      port: 8080
      targetPort: 8080

---
# --- PROD PONG SERVICE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-prod
  namespace: production
  labels:
    app: pong
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
      env: prod
  template:
    metadata:
      labels:
        app: pong
        env: prod
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: env
                    operator: In
                    values:
                      - prod
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: pong
          image: eyupcanbay/pong-service:38b636b10edf7ed11d1d0059a9abfb39cb1b405a
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: pong-prod
  namespace: production
  labels:
    app: pong
spec:
  selector:
    app: pong
    env: prod
  type: ClusterIP
  ports:
    - name: http-port
      port: 8081
      targetPort: 8081
