k8s/test-deployment.yaml
# --- TEST PING SERVICE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-test
  namespace: test
  labels:
    app: ping
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
      env: test
  template:
    metadata:
      labels:
        app: ping
        env: test
    spec:
      containers:
        - name: ping
          image: eyupcanbay/ping-service:2cc9a3342f14b8693f81ec84ae18644f2f4e22a4
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: ping-test
  namespace: test
  labels:
    app: ping
spec:
  selector:
    app: ping
    env: test
  type: NodePort
  ports:
    - name: http-port
      port: 8080
      targetPort: 8080

---
# --- TEST PONG SERVICE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-test
  namespace: test
  labels:
    app: pong
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
      env: test
  template:
    metadata:
      labels:
        app: pong
        env: test
    spec:
      containers:
        - name: pong
          image: eyupcanbay/pong-service:2cc9a3342f14b8693f81ec84ae18644f2f4e22a4
          resources:
            requests:
                memory: "64Mi"
                cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: pong-test
  namespace: test
  labels:
    app: pong
spec:
  selector:
    app: pong
    env: test
  type: ClusterIP
  ports:
    - name: http-port
      port: 8081
      targetPort: 8081
